# arcxx

./: .buildinfo  .gitignore  CMakeLists.txt  Dockerfile  README.md  database.cpp  docker-compose.yml  genindex.html  index.html  main.cpp  objects.inv  search.html  searchindex.js
.github/workflows/: doc_build.yml  gcc-test.yml  msvc-test.yml  test.yml
_sources/: index.rst.txt
_sources/api/: active_record.rst.txt
_sources/api/active_record/: model.rst.txt  query_relation.rst.txt
_sources/api/attributes/: integer.rst.txt
_sources/api/namespace/: active_record.rst.txt  attributes.rst.txt
_sources/tutorial/: table_creation.rst.txt
api/: active_record.html
api/active_record/: attributes.html  model.html  query_condition.html  query_relation.html  sqlite3.html
api/active_record/attributes/: binary.html  boolean.html  datetime.html  decimal.html  integer.html  reference_to.html  string.html
api/adaptors/: postgresql_adaptor.html  sqlite3_adaptor.html
api/attributes/: binary.html  boolean.html  datetime.html  decimal.html  integer.html  reference_to.html  string.html
api/namespace/: active_record.html  attributes.html  sqlite3.html
docs/: Dockerfile  Makefile  make_pots.sh  requirements.txt
docs/source/: conf.py  index.rst
docs/source/_templates/: footer.html  language_select.html
docs/source/api/: active_record.rst
docs/source/installation/: cmake.rst
docs/source/namespaces/: active_record.rst  attributes.rst
docs/source/tutorial/: aggregation.rst  database_connection.rst  find_columns.rst  group_by.rst  inserting.rst  select_columns.rst  table_creation.rst
en/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
en/.doctrees/: environment.pickle  index.doctree
en/.doctrees/api/: active_record.doctree  arcxx.doctree
en/.doctrees/installation/: cmake.doctree
en/.doctrees/tutorial/: aggregation.doctree  database_connection.doctree  find_columns.doctree  group_by.doctree  inserting.doctree  select_columns.doctree  table_creation.doctree
en/_sources/: index.rst.txt
en/_sources/api/: arcxx.rst.txt
en/_sources/installation/: cmake.rst.txt
en/_sources/tutorial/: aggregation.rst.txt  database_connection.rst.txt  find_columns.rst.txt  inserting.rst.txt  select_columns.rst.txt  table_creation.rst.txt
en/api/: active_record.html  arcxx.html
en/api/active_record/: PostgreSQL.html  attributes.html  model.html  query_condition.html  query_relation.html  sqlite3.html
en/api/adaptors/: postgresql_adaptor.html  sqlite3_adaptor.html
en/api/arcxx/: PostgreSQL.html  attributes.html  model.html  query_condition.html  query_relation.html  sqlite3.html
en/api/connectors/: postgresql_connector.html  sqlite3_connector.html
en/installation/: cmake.html
en/tutorial/: aggregation.html  database_connection.html  find_columns.html  group_by.html  inserting.html  select_columns.html  table_creation.html
examples/creata_table/: CMakeLists.txt
examples/create_table/: CMakeLists.txt  main.cpp
examples/find_columns/: CMakeLists.txt  main.cpp
examples/insert_data/: CMakeLists.txt  main.cpp
include/: active_record.hpp  arcxx.hpp
include/active_record/: adaptor.hpp  attribute.hpp  attribute_impl.hpp  attributes.hpp  columns.hpp  connector.hpp  database.hpp  model.hpp  query.hpp  query_impl.hpp  ranges.hpp  relation.hpp  struct_bind.hpp  table.hpp  utils.hpp
include/active_record/adaptors/: common_adaptor.hpp  postgresql_adaptor.hpp  sqlite3_adaptor.hpp
include/active_record/attributes/: attribute_aggregator.hpp  attribute_common.hpp  attribute_common_impl.hpp  attribute_common_impl.ipp  attributes.hpp  binary_attribute.hpp  boolean_attribute.hpp  datetime_attribute.hpp  decimal_attribute.hpp  foreign_key.hpp  integer_attribute.hpp  reference_to.hpp  string_attribute.hpp
include/active_record/connectors/: common_connector.hpp  postgresql_connector.hpp  sqlite3_connector.hpp
include/active_record/model_impl/: model_impl.hpp  model_impl.ipp  queries.hpp
include/active_record/query_impl/: model_queries.hpp  model_query_impl.ipp  query_condition.hpp  query_condition_impl.hpp  query_condition_impl.ipp  query_expression.hpp  query_impl.hpp  query_relation.hpp  query_relation_common_impl.ipp  query_relation_impl.hpp  query_relation_impl.ipp  query_utils.hpp
include/active_record/ranges/: adaptor_pipe.ipp  select.ipp  where.ipp
include/active_record/relations/: reference_to.hpp
include/arcxx/: attribute.hpp  connector.hpp  model.hpp  query.hpp  ranges.hpp  utils.hpp
include/arcxx/attributes/: attribute_aggregator.hpp  attribute_common.hpp  attribute_common_impl.ipp  attributes.hpp  binary_attribute.hpp  boolean_attribute.hpp  datetime_attribute.hpp  (+4 more)
installation/: cmake.html
ja/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
ja/.doctrees/: environment.pickle  index.doctree
ja/_sources/: index.rst.txt
ja/api/: active_record.html  arcxx.html
ja/installation/: cmake.html
ja/tutorial/: aggregation.html  database_connection.html  find_columns.html  group_by.html  inserting.html  select_columns.html  table_creation.html
test/: insert.cpp  user_model.hpp
tests/: CMakeLists.txt  aggregation_test.cpp  delete.cpp  delete_test.cpp  group_test.cpp  insert.cpp  insert_test.cpp  inserting_benchmark.cpp  join_test.cpp  model_test.cpp  select_test.cpp  test_fixtures.hpp  update.cpp  update_test.cpp  user_log_model.hpp  user_model.hpp
tests/Catch2_tests/: CMakeLists.txt  delete_test.cpp  insert_test.cpp  user_model.hpp
tests/benchmarks/: CMakeLists.txt  inserting_benchmark.cpp  just_a_test.cpp  long_SQL_statement_benchmark.cpp  user_model.hpp
tests/compile_tests/: CMakeLists.txt  model_query.cpp  query_map.cpp  query_scalar.cpp  query_vector.cpp  ranges.cpp
tests/integrated_tests/: CMakeLists.txt  aggregation_test.cpp  delete_test.cpp  find_test.cpp  group_test.cpp  insert_test.cpp  join_test.cpp  select_test.cpp  table_creation_test.cpp  test_fixtures.hpp  update_test.cpp  user_log_model.hpp  user_model.hpp
tutorial/: database_connection.html  table_creation.html
(+286 files in other folders)
